bloc from aghyad

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_screenutil: ^5.7.0
   flutter_wp_woocommerce: ^1.0.0
+  easy_localization: ^3.0.0
 
 
 dev_dependencies:
