--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   shimmer: ^2.0.0
   flutter_screenutil: ^5.7.0
   flutter_wp_woocommerce: ^1.0.0
-  easy_localization: ^3.0.0
+  easy_localization: ^3.0.1
+
 
 
 dev_dependencies:
@@ -75,9 +76,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
