OB init for widgets !

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_wp_woocommerce: ^1.0.0
   easy_localization: ^3.0.1
+  liquid_swipe: ^3.1.0
+  smooth_page_indicator: ^1.1.0
 
 
 
