--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   flutter_svg:
   lottie: ^2.3.2
+  url_launcher: ^6.1.10
+  flutter_easyloading: ^3.0.5
 
 
 
