--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.1.10
   flutter_easyloading: ^3.0.5
   simple_html_css: ^4.0.0
+  shared_preferences: ^2.1.1
 
 
 
