--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>caphore</string>
+	<string>كافور مول</string>
 	<key>LSApplicationQueriesSchemes</key>
     <array>
        <string>sms</string>
