--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,10 @@ dependencies:
   animate_do: ^2.1.0
   cached_network_image: ^3.2.1
   carousel_slider: ^4.1.1
-  google_fonts: ^3.0.1
+  google_fonts: ^5.1.0
   shimmer: ^2.0.0
   flutter_screenutil: ^5.7.0
-  flutter_wp_woocommerce: ^1.0.0
+#  flutter_wp_woocommerce: ^1.0.0
   easy_localization: ^3.0.1
   liquid_swipe: ^3.1.0
   smooth_page_indicator: ^1.1.0
