--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   flutter_easyloading: ^3.0.5
   simple_html_css: ^4.0.0
   shared_preferences: ^2.1.1
+  connectivity_plus: ^5.0.0
+  get: ^4.6.6
+  internet_connection_checker: ^1.0.0+1
+  awesome_dialog: ^3.1.0
 
 
 
