--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="sy.caphore">
     <uses-permission android:name="android.permission.INTERNET"/>
     <!-- Provide required visibility configuration for API level 30 and above -->
@@ -15,6 +16,7 @@
      </intent>
     </queries>
    <application
+        tools:replace="android:label"
         android:label="كافور مول"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
