--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+2
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -67,6 +67,8 @@ dependencies:
 #  signalr_core: ^1.1.1
   awesome_notifications_core: any
   awesome_notifications: ^0.8.2
+  store_redirect: ^2.0.1
+  delayed_display: ^2.0.0
 #  background_fetch: ^1.2.1
 
 
