new flutter update with image slider

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,7 @@ def keystorePropertiesFile = rootProject.file('key.properties')
        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
    }
 android {
+    namespace "sy.caphore"
     compileSdkVersion 34
     ndkVersion "25.1.8937393"
 
@@ -55,7 +56,7 @@ android {
         applicationId "sy.caphore"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 21
+        minSdkVersion 30
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
